--- a/core/build.gradle
+++ b/core/build.gradle
@@ -4,6 +4,6 @@ eclipse.project.name = appName + '-core'
 dependencies {
 	api "com.badlogicgames.gdx:gdx:$gdxVersion"
 	api "com.kotcrab.vis:vis-ui:$visUiVersion"
-        compile "ch.uprisesoft:yali:0.0.1"
-        compile "com.strongjoshua:libgdx-inGameConsole:1.0.0"
+        compile "ch.uprisesoft:yali:0.0.2"
+//        compile "com.strongjoshua:libgdx-inGameConsole:1.0.0"
 }
