--- a/core/build.gradle
+++ b/core/build.gradle
@@ -3,5 +3,6 @@ eclipse.project.name = appName + '-core'
 
 dependencies {
 	api "com.badlogicgames.gdx:gdx:$gdxVersion"
+	api "com.kotcrab.vis:vis-ui:$visUiVersion"
         compile "ch.uprisesoft:yali:0.0.3"
 }
