--- a/core/build.gradle
+++ b/core/build.gradle
@@ -2,7 +2,15 @@
 eclipse.project.name = appName + '-core'
 
 dependencies {
-	api "com.badlogicgames.gdx:gdx:$gdxVersion"
-	api "com.kotcrab.vis:vis-ui:$visUiVersion"
-        compile "ch.uprisesoft:yali:0.0.4"
+    api "com.badlogicgames.gdx:gdx:$gdxVersion"
+    api "com.kotcrab.vis:vis-ui:$visUiVersion"
+    compile "ch.uprisesoft:yali:0.0.6"
+}
+
+repositories {
+    jcenter()
+    maven {
+        name = "GitHubPackages"
+        url = uri("https://maven.pkg.github.com/rmaire/yali")
+    }
 }
