--- a/core/build.gradle
+++ b/core/build.gradle
@@ -4,7 +4,7 @@ eclipse.project.name = appName + '-core'
 dependencies {
     api "com.badlogicgames.gdx:gdx:$gdxVersion"
     api "com.kotcrab.vis:vis-ui:$visUiVersion"
-    compile "ch.uprisesoft:yali:0.0.6"
+    api "ch.uprisesoft:yali:0.0.6"
 }
 
 repositories {
