--- a/core/build.gradle
+++ b/core/build.gradle
@@ -5,6 +5,7 @@ dependencies {
     api "com.badlogicgames.gdx:gdx:$gdxVersion"
     api "com.kotcrab.vis:vis-ui:$visUiVersion"
     api "ch.uprisesoft:yali:0.0.6"
+    implementation "org.matheclipse:matheclipse-core:2.0.0"
 }
 
 repositories {
